@@ -1,3 +1,8 @@
+2001-04-14  AleX Espinoza  <cured@yahoo.com>
+ 
+ 	* src/print.c (print_verify_fonts): Added to verify that the fonts
+	are available for printing.
+	
 2001-04-12  Chema Celorio  <chema@celorio.com>
 
 	* src/converter.c (set_values): remove leading 0's
